FXOLAT-207: fix an event issue with the PortfolioModule and add more memory to the test process